2002-06-02  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (alpha_adjust_symtab_relocs): Fix thinko
	with LITERALs without sequence numbers.

2002-06-01  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c: Move LITUSE constants to "elf/alpha.h".
	Rename them LITUSE_ALPHA_*.

2002-05-31  Shrinivas Atre <ShrinivasA@kpit.com>

	* config/tc-h8300.c (get_operand): Allow stm.l and ldm.l insns to
	accept parentheses enclosed register lists.

2002-05-31  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2002-05-31  Graeme Peterson  <gp@qnx.com>

	* configure.in: Add i386-*-nto-qnx*.
	* configure: Regenerate.

2002-05-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (mips_ip): Use unsigned long values for
	warning output.

2002-05-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (s_cpsetup): Fix initialization of
	mips_cpreturn_register and mips_cpreturn_offset.

2002-05-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (s_cpsetup): Fix comment.

2002-05-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (md_begin): Add $ra as alias name for $31.
	(mips_ip): Likewise.
	(mips16_ip): Likewise.
	(tc_get_register): Likewise.

2002-05-30  Chris G. Demetriou  <cgd@broadcom.com>
            Ed Satterthwaite  <ehs@broadcom.com>

	* config/tc-mips.c (mips_set_options): New "ase_mdmx" member.
	(mips_opts): Initialize "ase_mdmx" member.
	(file_ase_mdmx): New variable.
	(CPU_HAS_MDMX): New macro.
	(md_begin): Initialize mips_opts.ase_mdmx and file_ase_mdmx
	based on command line options and configuration defaults.
	(macro_build): Note in comment that use of MDMX in macros is
	not currently allowed.
	(validate_mips_insn): Add support for the "O", "Q", "X", "Y", and
	"Z" MDMX operand types.
	(mips_ip): Accept MDMX instructions if mips_opts.ase_mdmx is set,